Final input tests

--- a/A1/makefile
+++ b/A1/makefile
@@ -3,7 +3,13 @@ all: a1.c functions/person.c functions/phone.c functions/initializeList.c functi
 	gcc -Wall -O -pedantic -o a1 a1.c functions/person.c functions/phone.c functions/initializeList.c functions/file.c functions/printList.c functions/freeThings.c functions/interaction.c
 
 use:
+	./a1 a1in.txt
+
+use1:
 	./a1 input.txt
 
+test:
+	./a1 input.txt < userInput.txt
+
 val:
-	valgrind ./a1 input.txt
+	valgrind ./a1 a1in.txt
